Better filter for elements on page Scenario-support
